--- a/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
+++ b/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
@@ -115,7 +115,7 @@
                 <label for="photo1">Photo 1</label>
                 <label class="custom-file-upload">
                     <input type="file" id="photo1" name="photos" accept="image/*" required>
-                    <span id="file-chosen1">No file chosen</span>
+                    <span id="file-chosen1">Select file</span>
                 </label>
             </div>
 
@@ -123,7 +123,7 @@
                 <label for="photo2">Photo 2</label>
                 <label class="custom-file-upload">
                     <input type="file" id="photo2" name="photos" accept="image/*">
-                    <span id="file-chosen2">No file chosen</span>
+                    <span id="file-chosen2">Select file</span>
                 </label>
             </div>
 
@@ -131,7 +131,7 @@
                 <label for="photo3">Photo 3</label>
                 <label class="custom-file-upload">
                     <input type="file" id="photo3" name="photos" accept="image/*">
-                    <span id="file-chosen3">No file chosen</span>
+                    <span id="file-chosen3">Select file</span>
                 </label>
             </div>
 
