--- a/src/main/resources/static/css/admin/main/new-building.css
+++ b/src/main/resources/static/css/admin/main/new-building.css
@@ -1,5 +1,3 @@
-/* new-building.css */
-
 /* New Building Navigation */
 .new-building-nav ul {
     display: flex;
@@ -33,24 +31,30 @@
 .banner-details-wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 30px;
+    align-items: stretch;
+    margin-bottom: 50px;
+    gap: 100px; /* Space between the two sections */
 }
 
 /* Banner Section */
-.new-building-banner {
+.new-building-banner,
+.banner-details {
     flex: 1;
     background-color: #1f1f1f;
-    padding: 20px;
+    padding: 15px; /* Reduced padding */
     border-radius: 20px;
-    margin-right: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 313px; /* Set maximum height */
+    min-height: 250px; /* Set minimum height to maintain symmetry */
 }
 
 .new-building-banner img {
-    max-width: 100%;
+    max-width: 50%;
     height: auto;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 18px;
 }
 
 .banner-preview span {
@@ -60,23 +64,20 @@
 
 /* Details Section */
 .banner-details {
-    flex: 1;
-    background-color: #1f1f1f;
-    padding: 20px 20px 74px;
-    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
-.form-group.small-width {
+/* Form Group Styling */
+.form-group.details, .form-group.new-building {
     max-width: 300px;
+    margin-bottom: 10px; /* Reduced margin */
 }
 
 /* General Section Styling */
 .new-building-section {
     background-color: #1f1f1f;
-    padding: 20px;
+    padding: 15px; /* Reduced padding */
     border-radius: 20px;
     box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
