--- a/src/main/resources/static/css/admin/main/new-building.css
+++ b/src/main/resources/static/css/admin/main/new-building.css
@@ -1,5 +1,8 @@
+/* new-building.css */
+
+
 /* Wrapper for banner and details to control overall width */
-.banner-photo-details-wrapper {
+.banner-photo-details-wrapper, .location-details-wrapper, .infrastructure-details-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -9,7 +12,7 @@
 
 /* Banner Section */
 .banner-photo,
-.new-building-details {
+.new-building-details, .location-block, .infrastructure-block {
     flex: 1;
     background-color: #1f1f1f;
     padding: 20px;
@@ -32,19 +35,39 @@
 }
 
 /* Photo Section */
+.photos-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
 .photo-upload {
     flex: 1;
     background-color: #1f1f1f;
-    padding: 20px;
-    border-radius: 20px;
-    margin-bottom: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
 }
 
 .photo-preview img {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
+}
+
+/* Textarea for project description */
+.form-group textarea {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    background-color: #2e2e2e;
+    color: #f1f1f1;
+    font-size: 14px;
+    resize: none;
+    margin-top: 20px;
 }
 
 /* Details Section */
@@ -54,10 +77,14 @@
 }
 
 /* Form Group Styling */
-.form-group.details,
-.form-group.new-building {
+.form-group.details {
     max-width: 300px;
     margin-bottom: 30px;
+}
+
+.form-group.new-building {
+    max-width: 300px;
+    margin-bottom: -30px;
 }
 
 /* General Section Styling */
@@ -86,4 +113,26 @@
     display: flex;
     justify-content: flex-end;
     gap: 20px;
+}
+
+.btn-group-table {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-left: -50px;
+    margin-right: -50px;
+}
+
+/* Custom file upload styles */
+.custom-file-upload {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #2e2e2e;
+    border: 2px dashed #4FC3A1;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
