--- a/src/main/resources/templates/admin/main/new-building/create/create-main.html
+++ b/src/main/resources/templates/admin/main/new-building/create/create-main.html
@@ -29,14 +29,14 @@
         <div class="banner-photo-details-wrapper">
             <div class="banner-photo">
                 <div class="form-group">
-                    <label for="banner">Main banner</label>
+                    <label for="photo1">Main banner</label>
                 </div>
                 <div class="banner-photo-preview">
-                    <img src="/images/examples/1920x800.jpg" alt="Image" id="banner-photo-preview" />
+                    <img src="/images/examples/1920x800.jpg" alt="Image" id="photo1-preview" />
                     <span>Recommended size: (1920x800)</span>
                 </div>
                 <label class="custom-file-upload">
-                    <input type="file" id="banner" name="banner" accept="image/*" onchange="previewBanner(event)" required>
+                    <input type="file" id="photo1" name="banner" accept="image/*" required>
                     <span id="file-chosen1">Select file</span>
                 </label>
             </div>
@@ -44,17 +44,17 @@
             <div class="new-building-details">
                 <div class="form-group new-building">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" th:value="${newBuilding.name}" placeholder="Name" />
+                    <input type="text" id="name" name="name" th:value="${newBuilding.name}" placeholder="Name" required/>
                 </div>
                 <div class="form-group new-building">
                     <label for="sortingOrder">Sorting order</label>
-                    <input type="number" id="sortingOrder" name="sortingOrder" th:value="${newBuilding.sortingOrder}" placeholder="Sorting order" />
+                    <input type="number" id="sortingOrder" name="sortingOrder" th:value="${newBuilding.sortingOrder}" placeholder="Sorting order" required/>
                 </div>
                 <div class="form-group">
-                    <label for="active">Status</label>
+                    <label for="status">Status</label>
                     <div class="checkbox-wrapper-63">
                         <label class="switch">
-                            <input type="checkbox" id="active" name="active" th:checked="${newBuilding.status}">
+                            <input type="checkbox" id="status" name="status" value="ACTIVE" th:checked="${newBuilding.status == 'ACTIVE'}">
                             <span class="slider"></span>
                         </label>
                     </div>
